<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="@drawable/sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:contentDescription="@string/logo_desc"
            android:layout_centerHorizontal="true"
            android:id="@+id/ivLogo"
            android:src="@drawable/logo"
            android:layout_width="130dp"
            android:layout_height="130dp" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_below="@+id/ivLogo"
            android:text="@string/title"
            android:gravity="center"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvTitleDesc"
            android:layout_below="@+id/tvTitle"
            android:text="@string/login_please"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/elName"
            android:layout_below="@+id/tvTitleDesc"
            app:startIconDrawable="@drawable/ic_user"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:hint="@string/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/elEmail"
            android:layout_below="@+id/elName"
            app:startIconDrawable="@drawable/ic_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:inputType="textEmailAddress"
                android:hint="@string/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/elPassword"
            android:layout_below="@+id/elEmail"
            app:startIconDrawable="@drawable/ic_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_below="@id/elPassword"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/login"
            android:onClick="btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvAskAcc"
            android:layout_below="@id/btnLogin"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_password"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>


</LinearLayout>